Проверка работы findByUserName и findRoleByString, рабочая версия с sucsessHandler

--- a/src/main/webapp/WEB-INF/views/user/index.html
+++ b/src/main/webapp/WEB-INF/views/user/index.html
@@ -27,6 +27,8 @@
 <br>
 <p th:text="${roleSet2}"/>
 <br>
+<p th:text="${userDelais}"/>
+<br>
 
 <form th:method="POST" th:action="@{/logout}">
     <input type="submit" value="Выход"/>
