--- a/src/main/webapp/WEB-INF/views/admin/edit.html
+++ b/src/main/webapp/WEB-INF/views/admin/edit.html
@@ -22,6 +22,13 @@
     <label for="email">Измените e-mail: </label>
     <input type="text" th:field="*{email}" id="email">
     <input type="submit" value="Update!"/>
+    <br/>
+    <select id="editRoles" name="rolesNames" multiple size="5" required>
+        <option value="ROLE_ADMIN"   adminSelect>ADMIN</option>
+        <option value="ROLE_USER"  userSelect>USER</option>
+        <option value="ROLE_MANAGER"  managerSelect>MANAGER</option>
+    </select>
+
 </form>
 <br>
 <br>
